force-app/main/default/objects/Phone__c.object
<CustomObject>
    <fields>
        <fullName>Aligned__c</fullName>
        <description>System indicator - Are the Phone contact and the Channel contact the same record?

Introduced to assist in finding issues created by contact merge.

Will show true for Phone records not linked to Channels.</description>
        <formula>BLANKVALUE(Channel__r.Contact__c, Contact__c) == Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Channel and Phone Contact records align</inlineHelpText>
        <label>Aligned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callista_address_type__c</fullName>
        <description>The address type as defined in Callista</description>
        <formula>TEXT(Channel__r.Type__c)</formula>
        <label>Callista Address Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_rollup_rank__c</fullName>
        <description>The ranking of Callista address types used to prioritise which types should take priority for a rollup of Callista addresses. A lower value indicates a higher priority than a higher value</description>
        <formula>CASE(Callista_address_type__c,
&quot;GRADUATION-APPL&quot;, &quot;00&quot;,
&quot;POSTAL&quot;, &quot;10&quot;,
&quot;POSTAL-EXT&quot;, &quot;20&quot;,
&quot;OS-POSTAL&quot;, &quot;30&quot;,
&quot;HOME&quot;, &quot;40&quot;,
&quot;OS-HOME&quot;, &quot;50&quot;,
&quot;MAILING&quot;, &quot;60&quot;,
&quot;AP-EMAIL&quot;, &quot;70&quot;,
&quot;&quot;)</formula>
        <label>Callista Rollup Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Link__c</fullName>
        <description>A link to the descriptive channel name field rather than the auto-number</description>
        <formula>Channel__r.Channel_Link__c</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel lookup field for the Contact Point object record</description>
        <label>Channel</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Phone channels must be for the same Contact record</errorMessage>
            <filterItems>
                <field>Channel__c.Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.Contact__c</valueField>
            </filterItems>
            <filterItems>
                <field>Channel__c.Type__c</field>
                <operation>notEqual</operation>
                <value>EMERCONT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Phones</relationshipLabel>
        <relationshipName>Phones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Defines how the phone number is classified, i.e. in which context it is used.
 Classification of the phone which is used to roll-up the phone number to the Contact, if certain conditions are met.</description>
        <inlineHelpText>Please provide a classification of the phone number</inlineHelpText>
        <label>Classification</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Point_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Relationship to Contact.</description>
        <inlineHelpText>Please provide the contact record this phone number is linked to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Phone Numbers</relationshipLabel>
        <relationshipName>Phones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>The country code stored separately from the phone number, which will also include this value.

Populated as a result of formatting, it will not affect the building of the phone number itself.</description>
        <inlineHelpText>International country code that was identified when phone formatting was applied</inlineHelpText>
        <label>Country Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated as a result of successfully being matched against a PHONE_NUMBER_FORMAT system setting regular expression.</description>
        <inlineHelpText>The country regex the phone number was successfully formatted against.</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Phones</relationshipLabel>
        <relationshipName>Phones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This defines the date until the phone number is valid for.</description>
        <inlineHelpText>Please provide the date the phone number is valid through, or leave it empty if it is not known or not end dated.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_System_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID used to identify records in an external system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID used to identify records in an external system.</inlineHelpText>
        <label>External System ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISO_Country__c</fullName>
        <description>The ISO name of the linked Country</description>
        <formula>TEXT(Country__r.Country__c)</formula>
        <inlineHelpText>The ISO name of the linked Country</inlineHelpText>
        <label>ISO Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether a phone number is active, usually when end date is in the past or the start date is in the future. This value Is automatically (by a scheduled process) set to &quot;false&quot; if End_Date__c is populated and in the past or the Start_Date__c is in the future.
If manually set/changed to &quot;True&quot; (&quot;False&quot;), then the End_Date__c is automatically removed (added with the current date).</description>
        <inlineHelpText>Please indicate whether the phone number is active or not (inactive).</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A soft delete flag on the record. 

An overnight purge process removes the record.</description>
        <inlineHelpText>Soft deleted, queued for purging</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global primary (by Contact), as such only a single Phone__c record can be flagged as primary per Contact Lookup.
If selected manually, all other records (for the Contact) will be marked as non-primary (false)
If none are selected, the entry with the latest Start_Date__c will be automatically marked as primary.</description>
        <inlineHelpText>Please indicate whether the phone number is primary for this Contact.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_UID__c</fullName>
        <description>System Field - Unique Key Combination field</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field - Unique Key Combination field</inlineHelpText>
        <label>Key UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_set_by__c</fullName>
        <description>Use as indicator if the record (only if Is_Primary__c changed) has been modified by user or system.</description>
        <label>Primary set by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of the phone number.</description>
        <inlineHelpText>Please enter source of the phone number, i.e. how were the details obtained.</inlineHelpText>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Point_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the phone number is valid from.</description>
        <inlineHelpText>Please provide a date indicating the valid from for the phone number</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <description>Time zone of the linked Country</description>
        <formula>IF(ISBLANK(TEXT(Country__r.Time_Zone__c)), &apos;Australia/Sydney&apos;, TEXT(Country__r.Time_Zone__c))</formula>
        <label>TimeZone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the phone number.

The order of the values is important as it drives some of the primary record selection behaviour.</description>
        <inlineHelpText>Please enter the phone number type</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Landline</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                    <default>true</default>
                    <label>Undefined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <description>Verification status of the record based from its source.</description>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Verification_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Phone</label>
    <listViews>
        <fullName>All_Mobiles</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Classification__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Mobile</value>
        </filters>
        <label>All Mobiles</label>
    </listViews>
    <listViews>
        <fullName>All_Phones</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Type__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Classification__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Phones</label>
    </listViews>
    <listViews>
        <fullName>All_records</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Channel__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Classification__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Phones Created Today</label>
    </listViews>
    <listViews>
        <fullName>Mobiles_Phones_Created_Today</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Channel__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Classification__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Mobile</value>
        </filters>
        <label>Mobiles Phones Created Today</label>
    </listViews>
    <listViews>
        <fullName>Phones_Created_This_Week</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Channel__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Classification__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Phones Created This Week</label>
    </listViews>
    <listViews>
        <fullName>Phones_Updated_This_Week</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Channel__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Classification__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Phones Updated This Week</label>
    </listViews>
    <nameField>
        <label>Phone Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_create_Callista_records</fullName>
        <active>true</active>
        <description>End users cannot create or update a record with the source field set to &quot;Callista&quot; as these are created through integration only.</description>
        <errorConditionFormula>AND(
  NOT(CONTAINS($User.Username, &apos;autoproc@&apos;)),
  $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
  OR(
    AND( ISNEW(), ISPICKVAL(Source__c, &apos;Callista&apos;) ),
    AND( ISCHANGED(Source__c), ISPICKVAL(Source__c, &apos;Callista&apos;) )
  ),
  NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c)
)</errorConditionFormula>
        <errorDisplayField>Source__c</errorDisplayField>
        <errorMessage>End users cannot create or update a record with the source field set to &quot;Callista&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_valid_phone_number</fullName>
        <active>true</active>
        <description>The entered phone number is not in a valid international format (i.e. +61... for Australia)</description>
        <errorConditionFormula>AND(
	NOT(
  REGEX( 
    Name, 
    &quot;^[0-9+\\-\\(\\) ]*$&quot;
  )
  ),
  NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The entered phone number is not in a valid format (e.g. +61412345678)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_must_not_be_older</fullName>
        <active>true</active>
        <description>Ensures that the start date is not older than the end date</description>
        <errorConditionFormula>AND(
	if (!ISBLANK(End_Date__c), Start_Date__c &gt; End_Date__c, FALSE), 
    NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The end date must be equal or later than the start date.</errorMessage>
    </validationRules>
</CustomObject>